--- a/config.json.example
+++ b/config.json.example
@@ -1,7 +1,11 @@
 {
-    "command": "dipy_fit_dti",
+    "command": "dipy_fit_csd",
     "b0_threshold": 5,
-    "bvecs_tol"
+    "bvecs_tol": 0.01,
+    "roi_radius":10,
+    "fa_thr":0.7,
+    "sh_order":6,
+    "odf_to_sh_order":8,
     "dwi": "testdata/data.nii.gz",
     "bvals": "testdata/data.bvals",
     "bvecs": "testdata/data.bvecs",
